Fix a los z-index

--- a/style.css
+++ b/style.css
@@ -339,9 +339,9 @@ button#installButton {
     bottom: 0;
     right: -40%; /* Inicialmente oculto a la derecha */
     background-color: #FFF; 
-    overflow-x: hidden; /* Asegúrate de que el contenido no se desborde */
+    overflow-x: hidden; /*Que el contenido no se desborde */
     transition: right 0.5s ease-in-out; /* Transición suave para la propiedad right */
-    z-index: 1; /* Por encima de otros elementos */
+    z-index: 1; 
     font-size: 0.85em;
     display: flex;
     justify-content: space-between;
@@ -478,7 +478,7 @@ button.mostrar-horarios {
     top: 50%; /* Centra verticalmente */
     left: 50%; /* Centra horizontalmente */
     transform: translate(-50%, -50%); /* Desplaza el elemento hacia atrás para centrarlo perfectamente */
-    z-index: 1;
+    z-index: 2;
     display: none;
     flex-direction: column;
     align-items: center;
@@ -540,7 +540,7 @@ button.mostrar-horarios {
     top: 400px;
     left: 50%;
     transform: translate(-50%, -290px);
-    z-index: 1;
+    z-index: 2;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s linear, visibility 0.3s linear;
